--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -610,6 +610,215 @@
     "# The transformer. Currently the tokens are not talking to each other, they're only using the last token to generate the next, wait! Is is Character NN?\n",
     "# So the transfromer should help us out."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 8, 2])"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# toy example\n",
+    "\n",
+    "torch.manual_seed(1337)\n",
+    "B, T, C = 4, 8, 2\n",
+    "x = torch.randn(B, T, C)\n",
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# average of past context\n",
+    "# x[b, t] = mean_{i<=t} x[b, i]\n",
+    "xbow = torch.zeros((B, T, C))\n",
+    "for b in range(B):\n",
+    "    for t in range(T):\n",
+    "        xprev = x[b, :t+1] # (t, C)\n",
+    "        xbow[b, t] = torch.mean(xprev, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.1808, -0.0700],\n",
+       "        [-0.3596, -0.9152],\n",
+       "        [ 0.6258,  0.0255],\n",
+       "        [ 0.9545,  0.0643],\n",
+       "        [ 0.3612,  1.1679],\n",
+       "        [-1.3499, -0.5102],\n",
+       "        [ 0.2360, -0.2398],\n",
+       "        [-0.9211,  1.5433]])"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.1808, -0.0700],\n",
+       "        [-0.0894, -0.4926],\n",
+       "        [ 0.1490, -0.3199],\n",
+       "        [ 0.3504, -0.2238],\n",
+       "        [ 0.3525,  0.0545],\n",
+       "        [ 0.0688, -0.0396],\n",
+       "        [ 0.0927, -0.0682],\n",
+       "        [-0.0341,  0.1332]])"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xbow[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.5000, 0.5000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.3333, 0.3333, 0.3333, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.2500, 0.2500, 0.2500, 0.2500, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.0000, 0.0000],\n",
+       "        [0.1429, 0.1429, 0.1429, 0.1429, 0.1429, 0.1429, 0.1429, 0.0000],\n",
+       "        [0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250]])"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# using matrix multiplication, more efficient\n",
+    "wei = torch.tril(torch.ones(T, T))\n",
+    "wei = wei / wei.sum(1, keepdim=True)\n",
+    "wei"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.1808, -0.0700],\n",
+       "        [-0.0894, -0.4926],\n",
+       "        [ 0.1490, -0.3199],\n",
+       "        [ 0.3504, -0.2238],\n",
+       "        [ 0.3525,  0.0545],\n",
+       "        [ 0.0688, -0.0396],\n",
+       "        [ 0.0927, -0.0682],\n",
+       "        [-0.0341,  0.1332]])"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xbow = wei @ x # (B, T , T) @ (B, T, C) ---> (B, T, C)\n",
+    "xbow[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "torch.manual_seed(1334)\n",
+    "\n",
+    "n_embd = 32\n",
+    "\n",
+    "# simple bigram model\n",
+    "class BigramLanguageModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.token_embedding_table = nn.Embedding(vocab_size, n_embd)\n",
+    "        self.position_embedding_table = nn.Embedding(context_length, n_embd)\n",
+    "        self.lm_head = nn.Linear(n_embd, vocab_size)\n",
+    "\n",
+    "    def forward(self, idx, target=None):\n",
+    "        B, T = idx.shape\n",
+    "        tok_emb = self.token_embedding_table(idx)    # B, T, C\n",
+    "        pos_emb = self.position_embedding_table(torch.arange(T)) # T, C\n",
+    "        x = tok_emb + pos_emb # B, T, C\n",
+    "        logits = self.lm_head(x) # B, T, vocab_size\n",
+    "\n",
+    "        B, T, C = logits.shape\n",
+    "        if target is None:\n",
+    "            loss = None\n",
+    "        else:\n",
+    "            logits, target = logits.view(B*T, C), target.view(B*T)\n",
+    "            loss = F.cross_entropy(logits, target) # Expects B, C, T, and loss of about -ln(1/65)=4.1743872699\n",
+    "        return logits, loss\n",
+    "    \n",
+    "    def generate(self, idx, max_new_tokens):\n",
+    "        for _ in range(max_new_tokens):\n",
+    "            # get predictions\n",
+    "            logits, loss = self.forward(idx)\n",
+    "            # focus only on the last time step\n",
+    "            logits = logits[:, -1, :] # becomes (B, C)\n",
+    "            # apply softmax to get probabilities\n",
+    "            probs = F.softmax(logits, dim=-1) # (B, C)\n",
+    "            # sample from the distribution\n",
+    "            idx_next = torch.multinomial(probs, num_samples=1) # (B, 1)\n",
+    "            # append sampled index to the running sequence\n",
+    "            idx = torch.cat((idx, idx_next), dim=1) # (B, T+1)\n",
+    "        return idx\n",
+    "    \n",
+    "\n",
+    "model = BigramLanguageModel()\n",
+    "output, loss = model(xb, yb)\n",
+    "print(output.shape)\n",
+    "print(loss)"
+   ]
   }
  ],
  "metadata": {
